--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^4.17.0",
     "jshint": "^2.9.5",
     "nodemon": "^1.15.1",
+    "npm": "^6.0.0",
     "twit": "^2.2.9",
     "twitter": "^1.7.1"
   }
