Update for vulnerabilities

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jshint": "^2.9.5",
     "nodemon": "^1.15.1",
     "npm": "^6.0.0",
+    "tar": "^4.4.8",
     "twit": "^2.2.9",
     "twitter": "^1.7.1"
   }
